--- a/index.html
+++ b/index.html
@@ -325,8 +325,9 @@
     </div>
 
     <div style="text-align: center; margin-top: 30px;">
-        <a href="download_all.zip" class="download-btn" style="padding: 10px 20px; background-color: #e74c3c;">
-            Download All Papers (2016-2024)
+        <a href="https://drive.google.com/file/d/18ChIA33DRj0qwwd-FQb3Xw0Wkjr3Z-P8/view?usp=sharing"
+            class="download-btn" style="padding: 10px 20px; background-color: #e74c3c;">
+            ආදර්ශ ප්‍රශ්න පත්‍ර I
         </a>
     </div>
 </body>
