play the advertisement

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
     </style>
 </head>
 
+<script async="async" data-cfasync="false" src="//pl26258097.effectiveratecpm.com/408bf8ca9058c7fcd56c7bcb22dbfff8/invoke.js"></script>
+<div id="container-408bf8ca9058c7fcd56c7bcb22dbfff8"></div>
+
 <body>
     <h1>A/L Commerce Past Papers (2016-2024)</h1>
 
@@ -330,6 +333,101 @@
             ආදර්ශ ප්‍රශ්න පත්‍ර I
         </a>
     </div>
+    <script type='text/javascript' src='//pl26258146.effectiveratecpm.com/40/2d/ea/402dea921d1235173ccdf1c8516d45de.js'></script>
+
+
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
 </body>
 
 </html>
