--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </style>
 </head>
 
-<script async="async" data-cfasync="false" src="//pl26258097.effectiveratecpm.com/408bf8ca9058c7fcd56c7bcb22dbfff8/invoke.js"></script>
+<script async="async" data-cfasync="false"
+    src="//pl26258097.effectiveratecpm.com/408bf8ca9058c7fcd56c7bcb22dbfff8/invoke.js"></script>
 <div id="container-408bf8ca9058c7fcd56c7bcb22dbfff8"></div>
 
 <body>
@@ -333,101 +334,121 @@
             ආදර්ශ ප්‍රශ්න පත්‍ර I
         </a>
     </div>
-    <script type='text/javascript' src='//pl26258146.effectiveratecpm.com/40/2d/ea/402dea921d1235173ccdf1c8516d45de.js'></script>
+
+    <div style="text-align: center; margin-top: 30px;">
+        <a href="https://pastpapers.wiki/wp-admin/admin-ajax.php?juwpfisadmin=false&action=wpfd&task=file.download&wpfd_category_id=30989&wpfd_file_id=83341&token=&preview=1"
+            class="download-btn" style="padding: 10px 20px; background-color: #e74c3c;">
+            ආදර්ශ ප්‍රශ්න පත්‍ර II
+        </a>
+    </div>
+
+
+
+    <script type='text/javascript'
+        src='//pl26258146.effectiveratecpm.com/40/2d/ea/402dea921d1235173ccdf1c8516d45de.js'></script>
 
 
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
 
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
 
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
-            'key' : 'c23dc5b3d07e6327f328335dc79b9a8e',
-            'format' : 'iframe',
-            'height' : 300,
-            'width' : 160,
-            'params' : {}
+            'key': 'c23dc5b3d07e6327f328335dc79b9a8e',
+            'format': 'iframe',
+            'height': 300,
+            'width': 160,
+            'params': {}
         };
     </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
+    <script type="text/javascript"
+        src="//www.highperformanceformat.com/c23dc5b3d07e6327f328335dc79b9a8e/invoke.js"></script>
 </body>
 
 </html>
